--- a/MyWallet/Views/DetailsPage.xaml
+++ b/MyWallet/Views/DetailsPage.xaml
@@ -2,37 +2,43 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="http://prismlibrary.com"
              prism:ViewModelLocator.AutowireViewModel="True"
-             x:Class="MyWallet.Views.DetailsPage"
-             BackgroundImageSource="https://i.pinimg.com/originals/e4/5f/54/e45f54e2cc5516e2210c34453db5ab6e.jpg">
+             xmlns:effect="clr-namespace:MyWallet.Effects"
+             x:Class="MyWallet.Views.DetailsPage">
     <ContentPage.Content>
-        <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Padding="20" Spacing="20">
-            <Label Text="Details" FontSize="Title" FontAttributes="Bold" TextColor="#E7385B"/>
+        <Grid>
+            <Image HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Aspect="AspectFill" Source="https://i.pinimg.com/originals/e4/5f/54/e45f54e2cc5516e2210c34453db5ab6e.jpg"/>
+            <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Padding="20" Spacing="20">
+                <StackLayout.Effects>                    
+                    <effect:SafeAreaPaddingEffect />                
+                </StackLayout.Effects>
+                    <Label Text="Details" FontSize="Title" FontAttributes="Bold" TextColor="#E7385B"/>
 
-            <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand" Padding="10">
-                <Label Text="Select a transaction to edit"/>
-                <CollectionView SelectionMode="Single" ItemsSource="{Binding Transactions}" SelectedItem="{Binding TransactionSelected}" SelectionChangedCommand="{Binding EditTransactionCommand}">
-                    <CollectionView.ItemTemplate>
-                        <DataTemplate>
-                            <StackLayout Padding="5" Spacing="0" BackgroundColor="#66FFFFFF">
-                                <Label Text="{Binding Date, StringFormat='{}{0:dd/MM/yyyy H:mm}'}"/>
-                                <Label>
-                                    <Label.FormattedText>
-                                      <FormattedString>
-                                        <Span Text="{Binding Symbol}" FontAttributes="Bold" />
-                                        <Span Text=": " />
-                                        <Span Text="{Binding Amount, StringFormat='{0:F2}'}" />
-                                      </FormattedString>
-                                    </Label.FormattedText>
-                                  </Label>
-                            </StackLayout>
-                        </DataTemplate>
-                    </CollectionView.ItemTemplate>
-                </CollectionView>
-            </StackLayout>
+                    <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand" Padding="10">
+                        <Label Text="Select a transaction to edit"/>
+                        <CollectionView SelectionMode="Single" ItemsSource="{Binding Transactions}" SelectedItem="{Binding TransactionSelected}" SelectionChangedCommand="{Binding EditTransactionCommand}">
+                            <CollectionView.ItemTemplate>
+                                <DataTemplate>
+                                    <StackLayout Padding="5" Spacing="0" BackgroundColor="#66FFFFFF">
+                                        <Label Text="{Binding Date, StringFormat='{}{0:dd/MM/yyyy H:mm}'}"/>
+                                        <Label>
+                                            <Label.FormattedText>
+                                              <FormattedString>
+                                                <Span Text="{Binding Symbol}" FontAttributes="Bold" />
+                                                <Span Text=": " />
+                                                <Span Text="{Binding Amount, StringFormat='{0:F2}'}" />
+                                              </FormattedString>
+                                            </Label.FormattedText>
+                                          </Label>
+                                    </StackLayout>
+                                </DataTemplate>
+                            </CollectionView.ItemTemplate>
+                        </CollectionView>
+                    </StackLayout>
 
-            <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand" Padding="10">
-                <Button Text="Go Back" TextColor="Black" Command="{Binding GoBackCommand}"/>
-            </StackLayout>
-        </StackLayout>
+                    <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand" Padding="10">
+                        <Button Text="Go Back" TextColor="Black" Command="{Binding GoBackCommand}"/>
+                    </StackLayout>
+                </StackLayout>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
